--- a/website/assets/styles.css
+++ b/website/assets/styles.css
@@ -1,9 +1,9 @@
-*{
+* {
     margin: 0px;
-    height: 100%;
-    width: 100%
-}
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
 
+}
 .nav-bar {
     background-color: rgb(106, 73, 74);
     height: 10%;
@@ -19,29 +19,85 @@
     width: auto;
 }
 
-tr{
+.heading {
     display: flex;
-    flex-wrap: wrap;
-    height: auto;
+    background-color: #0D47a1;/*couleur background header*/
+    box-shadow: 0px 5px 2px #2196f3;/*couleur shadow header*/
+}/* FFEC5C */
+h1 {
+    color: #FDB833;/*couleur titre header*/
+    font-weight: bold;
+    background: transparent;
+    padding: 10px;
+    
 }
 
-td{
-    list-style-type: none;
-    margin: 5%;
-    width: auto;
+.outer-wrapper {
+    margin-top: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
+    border: 1px solid black;
+    border-radius: 4px;
+    box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.9);
+    max-width: fit-content;
+    max-height: fit-content;
+
+    
+}
+.table-wrapper {
+    overflow-y: scroll;
+    overflow-x: scroll;
+    height: fit-content;
+    max-height: 66.4vh;
+    margin-top: 22px;
+    margin: 15px;
+    padding-bottom: 20px;
 }
 
-td>div{
-    border: solid 1px;
-    border-radius: 40%;
-    padding: 40px;
 
-    font-size: 30px;
-    width: auto;
+table {
+    
+    min-width: max-content;
+    
+    border-collapse: separate;
+    border-spacing: 0px;    
+    
 }
 
-tr>td>div>button{
-    width: 45px;
-    height: auto;
-    margin-left: 30%
+.table-filter {
+    border-radius: 5px;
+}
+
+table th{
+    position: sticky; 
+    top: 0px;
+    
+    background-color: #FDB833;/*couleur background tableau*/
+    color: black;/*couleur titre tableau*/
+    
+    text-align: center;
+    font-weight: normal;
+    font-size: 18px;
+    outline: 0.7px solid black;
+    border: 1.5px solid black;
+
+} 
+
+
+
+table th, table td {
+    
+    padding: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    
+}
+
+table td {
+    text-align: left;
+    
+    font-size: 15px;
+    border: 1px solid black;/*couleur grille*/
+    padding-left: 20px;
+    
 }
